ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_API_Settings__c/CnP_PaaS__CnP_API_Settings__c.object-meta.xml
<CustomObject>
    <label>C&amp;P API Settings</label>
    <nameField>
        <label>C&amp;P Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P API Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>