ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_API_Settings__c/fields/CnP_PaaS__CnP_Account_Nickname__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Account_Nickname__c</fullName>
    <label>C&amp;P Account Nickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>