ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_API_Settings__c/fields/CnP_PaaS__CnP_Description__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Description__c</fullName>
    <label>C&amp;P Account Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>