ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_API_Settings__c/fields/CnP_PaaS__Connected_User__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Connected_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CnP_API_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>