ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_API_Settings__c/fields/CnP_PaaS__Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Connection_Type__c</fullName>
    <label>Connection Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>