ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_API_Settings__c/fields/CnP_PaaS__Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>