ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_API_Settings__c/fields/CnP_PaaS__Gateway__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Gateway__c</fullName>
    <label>Gateway</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>