ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_API_Settings__c/fields/CnP_PaaS__Gateway_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Gateway_Name__c</fullName>
    <label>Gateway Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>